# example

./: .gitignore  1.data  2.data  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GRP_paameters_optimization.sln  RealValues.json  VariableValues.json  VariableValuesMain.json  VariableValuesRealCase.json  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  fracture_solver_init.json  fracture_solver_init_cyberfrac.json  fracture_solver_init_main.json  fractures_for_pebi.txt  fractures_pebi.txt  frtrwell_cyberfrac.txt  input.txt  layers.txt  main.cpp  main.vcxproj  main.vcxproj.filters  output.txt  props.txt  pso_qtotal_planar.txt  pso_qtotal_planar_restr.txt  snes_qtotal.txt  snes_qtotal_planar.txt  snes_qtotal_planar_restr.txt  test_new.data  test_old.data  with_full_prop_base.json
exe_files/frtrwell/: fractures_pebi.txt
exe_files/pebi/: 2.data  fractures_for_pebi.txt
exe_files/pebi/res0000/: field.txt  fip.txt  log.txt  model.SMSPEC  model.UNSMRY  model.txt
exe_files/pebi/res0000/DESIGN/: DESIGN.txt
exe_files/pebi/res0001/: PVT_tmp.txt  SWOF_SGOF_tmp.txt  field.txt  fip.txt  log.txt  model.SMSPEC  model.UNSMRY
exe_files/pebi/res0001/DESIGN/: DESIGN.txt
fracture_model/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  fracture_model.sln  fracture_model.vcxproj  fracture_model.vcxproj.filters
fracture_model/include/: FracModel.h
fracture_model/src/: FracModel.cpp
gd_solver/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  gd_solver.sln  gd_solver.vcxproj  gd_solver.vcxproj.filters
gd_solver/include/: Solver.h  SolverResults.h
gd_solver/src/: Solver.cpp  SolverResults.cpp
generator/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  generator.sln  generator.vcxproj  generator.vcxproj.filters
generator/include/: DataForRunning.h  Parser.h  Recalculator.h  VariableValue.h
generator/src/: DataForRunnig.cpp  Parser.cpp  Recalculator.cpp  VariableValue.cpp
jsoncpp/: CMakeLists.txt  cmake_install.cmake  jsoncpp.vcxproj  jsoncpp.vcxproj.filters
stoch_optimization/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  stoch_optimization.sln  stoch_optimization.vcxproj  stoch_optimization.vcxproj.filters
stoch_optimization/include/: ObjectiveMain.h  StochOptimization.h  pso.h  snes.h  xnes_math.h
stoch_optimization/src/: ObjectiveMain.cpp  StochOptimization.cpp  pso.cpp  snes.cpp  xnes_math.cpp
куча результатов всяких/: pso_feff.txt  pso_feff_runs.txt  pso_feff_runs_syn.txt  pso_feff_syn.txt  pso_length.txt  pso_pnet.txt  pso_pnet_feff_syn.txt  pso_pnet_runs.txt  pso_pnet_runs_syn.txt  pso_pnet_syn.txt  pso_qtotal.txt  pso_stime.txt  snes_feff.txt  snes_feff_runs.txt  snes_feff_runs_syn.txt  snes_feff_syn.txt  snes_length.txt  snes_pnet.txt  snes_pnet_feff.txt  snes_pnet_feff_syn.txt  snes_pnet_restr.txt  snes_pnet_runs.txt  snes_pnet_runs_syn.txt  snes_pnet_syn.txt  snes_qtotal.txt  snes_qtotal_pseudo.txt  snes_stime.txt  snes_stime_syn.txt
